# sudoku

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.5A185F316A237168.idx  raylib.h.6EAB65A0FE321DF3.idx
src/: main.cpp
